force-app/main/default/objects/breg_Form_Configuration__c/breg_Form_Configuration__c.object-meta.xml
<CustomObject>
    <label>Form Configuration</label>
    <nameField>
        <label>Form Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>