force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Available_only_for_Entity_Statuses__c.field-meta.xml
<CustomField>
    <fullName>breg_Available_only_for_Entity_Statuses__c</fullName>
    <label>Available only for Entity Statuses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>breg_Entity_Statuses</valueSetName>
    </valueSet>
</CustomField>