force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Business_Location__c.field-meta.xml
<CustomField>
    <fullName>breg_Business_Location__c</fullName>
    <label>Business Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>