force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>breg_Business_Process__c</fullName>
    <label>Business Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Name Reservation</fullName>
            </value>
            <value>
                <fullName>Name Registration</fullName>
            </value>
            <value>
                <fullName>Annual Report</fullName>
            </value>
            <value>
                <fullName>Business Filing</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>