force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Business_Structure__c.field-meta.xml
<CustomField>
    <fullName>breg_Business_Structure__c</fullName>
    <label>Business Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>