force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Change_Type__c</fullName>
    <label>Change Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TN/TM/SM Assignment</fullName>
            </value>
            <value>
                <fullName>Officer Director Change</fullName>
            </value>
            <value>
                <fullName>Address Change for Entity</fullName>
            </value>
            <value>
                <fullName>Address Change for TN/TM/SM/PR</fullName>
            </value>
            <value>
                <fullName>Address Change for O/D/M/M/P</fullName>
            </value>
            <value>
                <fullName>Name Change for Entity</fullName>
            </value>
            <value>
                <fullName>Registrant Name Change for TN</fullName>
            </value>
            <value>
                <fullName>Registrant Name Change for TM/SM</fullName>
            </value>
            <value>
                <fullName>Amendment/Changes</fullName>
            </value>
            <value>
                <fullName>Restated Articles</fullName>
            </value>
            <value>
                <fullName>Amended and Restated</fullName>
            </value>
            <value>
                <fullName>Annuals</fullName>
            </value>
            <value>
                <fullName>TN/TM/SM Renewal</fullName>
            </value>
            <value>
                <fullName>Correction of a Filing</fullName>
            </value>
            <value>
                <fullName>Dissolve/Terminate/Cancel/Withdraw</fullName>
            </value>
            <value>
                <fullName>Dissociation</fullName>
            </value>
            <value>
                <fullName>Issuance</fullName>
            </value>
            <value>
                <fullName>TN/TM/SM Cancellation</fullName>
            </value>
            <value>
                <fullName>Name Reservation Transfer</fullName>
            </value>
            <value>
                <fullName>Name Reservation Cancellation</fullName>
            </value>
            <value>
                <fullName>Name Reservation Renewal</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Revocation</fullName>
            </value>
            <value>
                <fullName>Mergers (Subsidiary into Parent)</fullName>
            </value>
            <value>
                <fullName>Mergers</fullName>
            </value>
            <value>
                <fullName>Foreign Merger</fullName>
            </value>
            <value>
                <fullName>Conversions</fullName>
            </value>
            <value>
                <fullName>Publicity Rights Renewal</fullName>
            </value>
            <value>
                <fullName>Publicity Rights Cancellation</fullName>
            </value>
            <value>
                <fullName>Change of RA by Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>