force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Cooperative_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Cooperative_Type__c</fullName>
    <description>Specifies the specific classification of cooperative organization being established.</description>
    <inlineHelpText>Select the type of cooperative that best describes your organization.</inlineHelpText>
    <label>Cooperative Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Cooperative</fullName>
            </value>
            <value>
                <fullName>Consumer Cooperative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>