force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Corporation_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Corporation_Type__c</fullName>
    <description>Specifies the specific classification of profit corporation being established.</description>
    <inlineHelpText>Select the type of profit corporation that best describes your business structure.</inlineHelpText>
    <label>Corporation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>breg_Profit_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Profit Corporation</fullName>
            </value>
            <value>
                <fullName>Professional Corporation</fullName>
            </value>
            <value>
                <fullName>Sustainable Business Corporation</fullName>
            </value>
            <value>
                <fullName>General Nonprofit Corporation</fullName>
            </value>
            <value>
                <fullName>Corporation Sole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>