force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Days_After_Submission_hold_Approval__c.field-meta.xml
<CustomField>
    <fullName>breg_Days_After_Submission_hold_Approval__c</fullName>
    <description>Aalta BREG-3564</description>
    <label>Days After Submission to hold Approval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>