force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Form_Available_Message__c.field-meta.xml
<CustomField>
    <fullName>breg_Form_Available_Message__c</fullName>
    <label>Form Available Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>