force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Form_Instruction_URL__c.field-meta.xml
<CustomField>
    <fullName>breg_Form_Instruction_URL__c</fullName>
    <label>Form Instruction URL</label>
    <type>Url</type>
</CustomField>