force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Form_Name__c</fullName>
    <label>Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>