force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Heading__c.field-meta.xml
<CustomField>
    <fullName>breg_Heading__c</fullName>
    <label>Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>