force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Is_Expeditable__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Expeditable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Expeditable</label>
    <type>Checkbox</type>
</CustomField>