force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Linked_Form__c.field-meta.xml
<CustomField>
    <fullName>breg_Linked_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is used to specify the next form that should be filled after the current one.</inlineHelpText>
    <label>Linked Form</label>
    <referenceTo>breg_Form_Configuration__c</referenceTo>
    <relationshipLabel>Form Configurations</relationshipLabel>
    <relationshipName>breg_Linked_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>