force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Partnership_Type__c</fullName>
    <label>Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>breg_Partnership_Types</valueSetName>
    </valueSet>
</CustomField>