force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Profit_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Profit_Type__c</fullName>
    <label>Profit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Profit</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>