force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Name</fullName>
            </value>
            <value>
                <fullName>Trademark</fullName>
            </value>
            <value>
                <fullName>Service Mark</fullName>
            </value>
            <value>
                <fullName>Publicity Rights Name</fullName>
            </value>
            <value>
                <fullName>TNTMSM Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>