force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Required_Information__c.field-meta.xml
<CustomField>
    <fullName>breg_Required_Information__c</fullName>
    <inlineHelpText>This field is used to specify text message that is displayed for some Forms under the &quot;What is this form&quot; component</inlineHelpText>
    <label>Required Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>