force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Show_Error_For_Additional_States__c.field-meta.xml
<CustomField>
    <fullName>breg_Show_Error_For_Additional_States__c</fullName>
    <label>Show Error For Additional States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>breg_Additional_Entity_States</valueSetName>
    </valueSet>
</CustomField>