force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Stock_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Stock_Type__c</fullName>
    <label>Stock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Stock</fullName>
            </value>
            <value>
                <fullName>Without Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>