force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Suffix_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Suffix_Code__c</fullName>
    <inlineHelpText>Specifies code of the form, i.e. A1, C-5, etc</inlineHelpText>
    <label>Suffix Code</label>
    <length>99</length>
    <required>true</required>
    <type>Text</type>
</CustomField>