force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Trade_Type__c</fullName>
    <label>Trade Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Trade Name</fullName>
            </value>
            <value>
                <fullName>Trademark</fullName>
            </value>
            <value>
                <fullName>Service Mark</fullName>
            </value>
            <value>
                <fullName>Publicity Rights Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>