force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Visible_Fields_3__c.field-meta.xml
<CustomField>
    <fullName>breg_Visible_Fields_3__c</fullName>
    <label>Visible Fields 3</label>
    <type>TextArea</type>
</CustomField>