force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_What_is_this_form__c.field-meta.xml
<CustomField>
    <fullName>breg_What_is_this_form__c</fullName>
    <inlineHelpText>This field is used to specify text message that is displayed in the &quot;What is this form&quot; component</inlineHelpText>
    <label>What is this form?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>