force-app/main/default/objects/breg_Form_Configuration__c/fields/breg_Withdrawal_Range__c.field-meta.xml
<CustomField>
    <fullName>breg_Withdrawal_Range__c</fullName>
    <description>Time range (in hours) to accept submitted filing withdrawal</description>
    <inlineHelpText>In hours</inlineHelpText>
    <label>Withdrawal Range</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>